--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "@tauri-apps/api": "^1.3.0"
   },
   "devDependencies": {
-    "@types/node": "^18.7.10",
-    "@sveltejs/vite-plugin-svelte": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^2.2.0",
+    "@tauri-apps/cli": "^1.3.1",
     "@tsconfig/svelte": "^3.0.0",
-    "svelte": "^3.54.0",
-    "svelte-check": "^3.0.0",
-    "svelte-preprocess": "^5.0.0",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.5",
-    "vite": "^4.2.1",
-    "@tauri-apps/cli": "^1.3.0"
+    "@types/node": "^18.16.5",
+    "svelte": "^3.59.1",
+    "svelte-check": "^3.3.1",
+    "svelte-preprocess": "^5.0.3",
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.5"
   }
 }
