--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tauri-apps/cli": "^1.3.1",
     "@tsconfig/svelte": "^3.0.0",
     "@types/node": "^18.16.5",
+    "interactjs": "^1.10.17",
     "svelte": "^3.59.1",
     "svelte-check": "^3.3.1",
     "svelte-preprocess": "^5.0.3",
