--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "svelte-preprocess": "^5.0.3",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4",
-    "vite": "^4.3.5"
+    "vite": "^4.3.5",
+    "postcss": "^8.4.23",
+    "postcss-load-config": "^4.0.1",
+    "autoprefixer": "^10.4.14",
+    "tailwindcss": "^3.3.1"
   }
 }
